fixed a Java 1.8 compatibility issue